# fastapi-auth-template

./: .env.example  .gitignore  main.py  pyproject.toml
app/: db.py  env.py
app/models/: user.py
app/routes/: auth.py
app/utils/: jwt.py  pwd_crypt.py
test/unit/: base.py  test_db.py
test/unit/models/user/: test_get_user.py  test_usercreate.py
test/unit/utils/: test_jwt.py
